--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,9 +1,9 @@
 <%= render 'navbar' %>
 
 
-<body> <!-- style="background-color: #e8ecf0;"> -->
+<body class="login-background"><!-- style="background-color: #e8ecf0;"> -->
   <br><br><br><br>
-  <div style="text-align:center;"> 
+  <div style="text-align:center; color:white;"> 
   <h2>Forgot Your Password?</h2>
 </div>
     <div class="login-form">
