--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,7 +2,7 @@
 
 
 <body style="background-color: #f6f6f6;">
-	<div class="page-header">
+	<div class="page-header" style="background: #7f98b1;">
 
 		<div class="page-header-nav">
             <div class="container">
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="container-small">
-		<div class="box order-invoice">
+		<div class="box order-invoice" style="border-top: #fd705c;">
             <div class="invoice-target">
                         instela.co
             </div>
