--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a>  <!-- text-primary -->
+            <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</aa></a>  <!-- text-primary -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,10 +24,7 @@
                     <a class="page-scroll" href="/#services"><aa>Our services</aa></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#examples"><aa>Examples</aa></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#contact"><aa>Contact</aa></a>
+                    <a class="page-scroll" href="/contact"><aa>Contact Us</aa></a>
                 </li>
             </ul>
         </div>
@@ -140,7 +137,7 @@
 	          </ol>
 	        </li>
 	        <li>
-	          We may use your personal data to send you emails (or other communications) with details of our or third party products or services which may be of interest to you, including information about special offers or promotions. If you would prefer not to receive any such emails or other communications, please tell us by emailing us at <a href="mailto:info@Instela.co">info@Instela.co</a>.
+	          We may use your personal data to send you emails (or other communications) with details of our or third party products or services which may be of interest to you, including information about special offers or promotions. If you would prefer not to receive any such emails or other communications, please tell us by emailing us at <a href="mailto:help@Instela.co">help@Instela.co</a>.
 	        </li>
 	        <li>
 	          We will use any information collected about you automatically when you visit the site:
@@ -272,7 +269,7 @@
 	          If you have any questions or feedback about this policy, please contact us by writing to
 	          us at
 	          563 CHISWICK HIGH ROAD, London, W4 3AY
-	          or by emailing us at <a href="mailto:info@Instela.co">info@Instela.co</a>.
+	          or by emailing us at <a href="mailto:help@Instela.co">help@Instela.co</a>.
 	        </li>
 	      </ol>
 
