--- a/app/views/devise/passwords/_navbar.html.erb
+++ b/app/views/devise/passwords/_navbar.html.erb
@@ -8,16 +8,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a>
+            <a class="navbar-brand page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 
-                <li>
-                    <a class="page-scroll" href="/contact"><aa>Contact Us</aa></a>
-               </li>
+                <li><a class="page-scroll navbar-light" href="/contact">Contact Us</a></li>
                
 
             </ul>
