--- a/app/views/messages/_navbar.html.erb
+++ b/app/views/messages/_navbar.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</aa></a>
+            <a class="navbar-brand page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
