--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</aa></a>
+            <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i>instela</aa></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,10 +25,7 @@
                     <a class="page-scroll" href="/#services"><aa>Our services</aa></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#examples"><aa>Examples</aa></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#contact"><aa>Contact</aa></a>
+                    <a class="page-scroll" href="/contact"><aa>Contact Us</aa></a>
                 </li>
             </ul>
         </div>
