--- a/app/views/devise/registrations/_navbar.html.erb
+++ b/app/views/devise/registrations/_navbar.html.erb
@@ -5,8 +5,14 @@
        <!--  <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a>  -->
 
 
-       <div class="navbar-header pull-left">
+       <!-- <div class="navbar-header pull-left">
         <a class="navbar-brand navbar-light page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</a>
+        </div> -->
+
+        <div class="navbar-header pull-left" >
+            <a class="navbar-brand page-scroll " href="/#page-top">
+            <div class="navbar-inst-logo wow bounceIn" style="width: 300px;"></div>
+            </a>
         </div>
         
         <!-- Title -->
