--- a/app/views/orders/_navbar.html.erb
+++ b/app/views/orders/_navbar.html.erb
@@ -4,9 +4,15 @@
 
        <!--  <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a>  -->
 
-        <div class="navbar-header pull-left">
-        <a class="navbar-brand navbar-light page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i> instela</a>
+       <div class="navbar-header pull-left" >
+            <a class="navbar-brand page-scroll " href="/#page-top">
+            <div class="navbar-inst-logo wow bounceIn" style="width: 300px;"></div>
+            </a>
         </div>
+
+        <!-- <div class="navbar-header pull-left">
+        <a class="navbar-brand navbar-light page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i> instela</a>
+        </div> -->
 
         <!-- Title -->
         <!-- <div class="navbar-header pull-left">
