--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -11,7 +11,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</aa></a>  <!-- text-primary -->
+
+
+            <div class="navbar-header pull-left" >
+           		 <a class="navbar-brand page-scroll " href="/#page-top">
+            		<div class="navbar-inst-pages wow bounceIn" style="width: 300px;"></div>
+           	 	</a>
+        	</div>
+
+            <!-- <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</aa></a>  --> <!-- text-primary -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -35,8 +43,14 @@
 
 <div class="container">
 		<br>
+		
 		<br>
 		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
 		<h2>Privacy Policy</h2>
 		<br>
 
