--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -12,7 +12,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i>instela</aa></a>
+
+            <div class="navbar-header pull-left" >
+                 <a class="navbar-brand page-scroll " href="/#page-top">
+                    <div class="navbar-inst-pages wow bounceIn" style="width: 300px;"></div>
+                </a>
+            </div>
+            
+            <!-- <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i>instela</aa></a> -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,8 +45,12 @@
 
 <div class="container">
     <br>
-    <br>
-    <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     <h2>Terms of Service</h2>
     <br>
 
