--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -3,15 +3,15 @@
 
 
         <!-- Title -->
-        <div class="navbar-header pull-left">
-        <a class="navbar-brand page-scroll" href="/#page-top"><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</a>
-        </div>
-        
         <!-- <div class="navbar-header pull-left">
-            <a class="navbar-brand page-scroll " href="/#page-top">
-            <img src="", class="navbar-inst-logo wow bounceIn", alt: ""></img>
-            </a>
+        <a class="navbar-brand page-scroll" href="/#page-top"><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</a>
         </div> -->
+        
+        <div class="navbar-header pull-left" >
+            <a class="navbar-brand page-scroll " href="/#page-top">
+            <div class="navbar-inst-logo wow bounceIn" style="width: 300px;"></div>
+            </a>
+        </div>
 
         <%- if account_signed_in? %>
             <% account = Account.find_by_id(current_account.id) %>
