--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -9,7 +9,7 @@
         
         <div class="navbar-header pull-left" >
             <a class="navbar-brand page-scroll " href="/#page-top">
-            <div class="navbar-inst-logo wow bounceIn" style="width: 300px;"></div>
+            <div class="navbar-inst-logo wow bounceIn" style="width: 280px;"></div>
             </a>
         </div>
 
@@ -69,9 +69,9 @@
     <ul class="nav navbar-nav navbar-right"> -->
 
             <!-- The Collapsing items            navbar-left or navbar-right -->
-            <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
             <!--                      pull-right keeps the drop-down in line -->
-                <ul class="nav navbar-nav pull-left">
+                <ul class="nav navbar-nav navbar-right">
 
                 <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right"> -->
