--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -901,24 +901,27 @@ font-family: "Open Sans", sans-serif;
 
     .navbar-default .navbar-inst-logo {
     background: url(/assets/instela-orange.png) no-repeat 0 -170px;
-        background-size: 250px;  /* 150px; */
+        background-size: 220px;  /* 150px; */
         background-position: 0 0;
         width: 250px;   /* 150px; */
         height: 180px;   /* 45px */
-        margin: -108px 0 10px -30px;   /*  -13px 0 10px -6px */
+        margin: -92px 0 10px -20px;   /*  -13px 0 10px -6px */
     }
 
 
-   
+   .navbar-default .logo-width-screensize {
+        width: 170px;
+
+   }
 
 
     .navbar-default.affix .navbar-inst-logo {
     background: url(/assets/instela-orange.png) no-repeat 0 -170px;
-        background-size: 250px;  /* 150px; */
+        background-size: 220px;  /* 150px; */
         background-position: 0 0;
         width: 250px;   /* 150px; */
         height: 180px;   /* 45px */
-        margin: -108px 0 10px -30px;   /*  -13px 0 10px -6px */
+        margin: -92px 0 10px -20px;   /*  -13px 0 10px -6px */
     }
 
 
@@ -1030,9 +1033,6 @@ aside {
 
 
 
-
-
-
 @media(min-width:768px) {
 
     
@@ -1042,6 +1042,8 @@ aside {
         background-color: transparent;
         /*text-shadow: 0px 0px 0.2px white;*/
     }
+
+
 
     /* instela logo-name*/
     .navbar-default .navbar-header .navbar-brand {
@@ -1055,25 +1057,90 @@ aside {
 
 
 
+    /* Small size just before collapse of navbar: */
     .navbar-default .navbar-inst-logo {
     background: url(/assets/instela-white.png) no-repeat 0 -170px;
-        background-size: 400px;  /* 250px; */
+        background-size: 250px;  /* 250px; */
         background-position: 0 0;
         background-color: transparent;
-        width: 400px;       /* 250px; */
+        width: 250px;       /* 250px; */
         height: 250px;       /* 75px; */
-        margin: -150px 0 10px -43px;   /* 10px 0 10px -6px; */
+        margin: -100px 0 10px -45px;   /* 10px 0 10px -6px; */
+    }
+    .navbar-default .logo-width-screensize {
+        width: 180px;
+    
+    }
+    .navbar-default .navbar-inst-logo:hover {
+        background: url(/assets/instela-orange.png) no-repeat 0 -170px;
+            background-size: 250px;  /* 250px; */
+            background-position: 0 0;
+            background-color: transparent;
+            width: 250px;       /* 250px; */
+            height: 250px;       /* 75px; */
+            margin: -100px 0 10px -45px;
     }
 
-    .navbar-default .navbar-inst-logo:hover {
-    background: url(/assets/instela-orange.png) no-repeat 0 -170px;
-        background-size: 400px;  /* 250px; */
-        background-position: 0 0;
-        background-color: transparent;
-        width: 400px;       /* 250px; */
-        height: 250px;       /* 75px; */
-        margin: -150px 0 10px -43px;   /* 10px 0 10px -6px; */
+    @media(min-width:812px) {
+        .navbar-default .navbar-inst-logo {
+        background: url(/assets/instela-white.png) no-repeat 0 -170px;
+            background-size: 300px;  /* 250px; */
+            background-position: 0 0;
+            background-color: transparent;
+            width: 300px;       /* 250px; */
+            height: 250px;       /* 75px; */
+            margin: -110px 0 10px -45px;   /* 10px 0 10px -6px; */
+
+        }
+        .navbar-default .logo-width-screensize {
+                width: 220px;
+
+       }
+
+
+       .navbar-default .navbar-inst-logo:hover {
+            background: url(/assets/instela-orange.png) no-repeat 0 -170px;
+                background-size: 300px;  /* 250px; */
+                background-position: 0 0;
+                background-color: transparent;
+                width: 300px;       /* 250px; */
+                height: 250px;       /* 75px; */
+                margin: -110px 0 10px -45px;
+        }
+
     }
+
+    @media(min-width:1020px) { 
+
+        .navbar-default .navbar-inst-logo {
+        background: url(/assets/instela-white.png) no-repeat 0 -170px;
+            background-size: 400px;  /* 250px; */
+            background-position: 0 0;
+            background-color: transparent;
+            width: 400px;       /* 250px; */
+            height: 250px;       /* 75px; */
+            margin: -150px 0 10px -43px;   /* 10px 0 10px -6px; */
+        }
+
+        .navbar-default .logo-width-screensize {
+                width: 280px;
+
+       }
+
+        .navbar-default .navbar-inst-logo:hover {
+        background: url(/assets/instela-orange.png) no-repeat 0 -170px;
+            background-size: 400px;  /* 250px; */
+            background-position: 0 0;
+            background-color: transparent;
+            width: 400px;       /* 250px; */
+            height: 250px;       /* 75px; */
+            margin: -150px 0 10px -43px;   /* 10px 0 10px -6px; */
+        }
+
+
+    }
+
+   
 
 
     .navbar-default.affix .navbar-inst-logo {
@@ -1084,6 +1151,7 @@ aside {
         height: 180px;   /* 45px */
         margin: -108px 0 10px -30px;   /*  -13px 0 10px -6px */
     }
+
 
 
 
@@ -1456,9 +1524,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-    border-color: #ed431f;
+    border-color: $instela-hover;
     color: #fff;
-    background-color: #ee4b28;
+    background-color: $instela-hover;
 }
 
 .btn-primary:active,
