--- a/app/views/charges_mailer/send_receipt.html.erb
+++ b/app/views/charges_mailer/send_receipt.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+<html xmlns="http://www.w3.org/1999/xhtml" style="font-family: 'Open Sans', sans-serif;; box-sizing: border-box; font-size: 14px; margin: 0;">
 <head>
 <meta name="viewport" content="width=device-width" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -53,74 +53,202 @@ background-color: #f6f6f6;
   .invoice {
     width: 100% !important;
   }
+
+
+  .page-header {
+    position: relative;
+    /*background: linear-gradient(180deg,$instela-hover, $instela-orange,  #f4876f);*/
+    /*background: linear-gradient(105deg,#2d6c99,#69c0d3);*/
+    /*background-color: #121c25;*/
+   /*background-color: $instela-orange;*/
+   background-color: #fd705c;
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 230px;
+    padding: 90px 0 30px 0;
+    z-index: 1;
+    margin-top: 0;
 }
+
+.page-header-nav {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0 0 10px 0;
+}
+
+.page-header-nav .muted-link {
+    display: block;
+    margin: 0;
+    /* padding: 0; */
+    position: relative;
+    z-index: 90;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 1.5rem;
+    line-height: 1em;
+    font-weight: 400;
+    font-weight: 300;
+    color: white;
+    text-decoration:none; 
+}
+
+.page-header-nav .muted-link:hover {
+    color: #ffe7e4;
+}
+
+
+.order-invoice  {
+     z-index: 1;
+    margin-top: 30px;
+}
+
+.order-invoice .invoice-target {
+    display: block;
+    background: #fd705c;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    color: white;
+    font-size: 4.5rem;
+
+}
+
+.order-invoice .invoice-meta {
+    padding: 30px 30px 0px 30px;
+}
+
+.order-invoice .invoice-date-service {
+    font-size: 1.8rem;
+    line-height: 2.5em;
+    color: #6b7781;    
+}
+
+.order-invoice .invoice-amount {
+    font-size: 3.0rem;
+    line-height: 2.0em;
+    font-weight: 600;
+}
+
+.order-invoice .invoice-id {
+    font-size: 2.5rem;
+    line-height: 1.5em;
+    font-weight: 500;
+}
+
+
+.order-invoice .invoice-center {
+    text-align: center;
+}
+
+.order-invoice .invoice-right {
+    text-align: right;
+}
+
+.order-invoice .invoice-left {
+    text-align: left;
+}
+
+
+.order-invoice .invoice-address {
+    padding: 0px 30px 20px 30px; 
+    border-bottom: 1px solid #e8ecf0;
+    font-size: 1.4rem;
+}
+
+.order-invoice .invoice-client {
+    font-weight: 600;
+}
+
+
+.order-invoice .invoice-service-price {
+    padding: 20px 30px 0px 30px;
+    font-size: 1.5rem;
+    line-height: 2.5em;
+    font-weight: 600;
+}
+
+.order-invoice .invoice-upper {
+    text-transform: uppercase;
+}
+
+
+.order-invoice .invoice-price {
+    padding: 5px 30px 0px 30px;
+    color: #6b7781;
+    font-size: 1.5rem;
+    line-height: 1.3em;
+}
+
+.order-invoice .invoice-total {
+    padding: 10px 30px 30px 30px;
+    border-bottom: 1px solid #e8ecf0;
+    font-size: 2.5rem;
+    line-height: 2.1em;
+
+
+}
+
+
+.container-small{
+    display: block;
+    position: relative;
+    max-width: 545px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.box {
+    background: #FFF;
+    border-top: 3px solid #7f98b1;
+    position: relative;
+}
+
+
+}
+
 </style>
 </head>
-<body itemscope itemtype="http://schema.org/EmailMessage" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; width: 100% !important; height: 100%; line-height: 1.6em; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6">
-<table class="body-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
-    <td class="container" width="600" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; display: block !important; max-width: 600px !important; clear: both !important; margin: 0 auto;" valign="top">
-      <div class="content" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; max-width: 600px; display: block; margin: 0 auto; padding: 20px;">
-        <table class="main" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; border-radius: 3px; background-color: #fff; margin: 0; border: 1px solid #e9e9e9;" bgcolor="#fff"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-wrap aligncenter" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: center; margin: 0; padding: 20px;" align="center" valign="top">
-              <table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                    <a href="https://www.instela.co" target="_blank" style="text-decoration:none; color:#f05f40" align="right">
-                    <!-- <img src="instela_thin.png" height="50%" width="50%"> -->
-                    <h1 color="#f05f40" style="font-family: 'ArialRoundedMTBold'">Instela.co</h1>
-                    </a>
-                    <h3 align="right"><%= Date.today %></h3>
-                    <h1 class="aligncenter" style="font-family: 'Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif; box-sizing: border-box; font-size: 32px; color: #000; line-height: 1.2em; font-weight: 500; text-align: center; margin: 40px 0 0;" align="center">£<%= @charge.amount %> Paid</h1>
-                    <!-- Remember to add VAT when applicable. -->
-                  </td>
-                </tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                    <h2 class="aligncenter" style="font-family: 'Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif; box-sizing: border-box; font-size: 24px; color: #000; line-height: 1.2em; font-weight: 400; text-align: center; margin: 40px 0 0;" align="center">Thanks for using our services.</h2>
-                  </td>
-                </tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block aligncenter" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: center; margin: 0; padding: 0 0 20px;" align="center" valign="top">
-                    <table class="invoice" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; text-align: left; width: 80%; margin: 40px auto;"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 5px 0; font-weight:bold" valign="top"><%= @charge.account.company %><br style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;" />Invoice #<%= @charge.id %>
-                    <!-- <br style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;" />Service delivered by Lee  --><br style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;" /><%= @charge.duration %> hours</td>
-                      </tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 5px 0;" valign="top">
-                          <table class="invoice-items" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; margin: 0;">
-                            <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                              <td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" valign="top"><%= @charge.service_type %>
-                              </td>
-                              <td class="alignright" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top">£<%= @charge.hourly_fee %>/hour
-                              </td>
-                            </tr>
-                            <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                              <td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top">No. of Hours</td>
-                              <td class="alignright" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top"><%= @charge.duration %></td>
-                            </tr><!-- tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top">VAT Ex. Price</td> -->
-                              <!-- <td class="alignright" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top">£<%= @charge.amount %></td> -->
-                            <!-- </tr><tr class="total" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="alignright" width="80%" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 2px; border-top-color: #333; border-top-style: solid; border-bottom-color: #333; border-bottom-width: 0px; border-bottom-style: solid; font-weight: 700; margin: 0; padding: 5px 0;" align="right" valign="top">VAT</td>
-                              <td class="alignright" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 2px; border-top-color: #333; border-top-style: solid; border-bottom-color: #333; border-bottom-width: 0px; border-bottom-style: solid; font-weight: 700; margin: 0; padding: 5px 0;" align="right" valign="top">£<%= @charge.amount * 0.2 %></td>
-                            </tr> -->
 
-                            
-                          <% if @charge.discount > 0 %>
+<body>
+  <div style="display: block; position: relative; max-width: 545px; margin-left: auto; margin-right: auto;">
 
-                          </tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top">Discount</td>
-                              <td class="alignright" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top"><%= @charge.discount %>%</td>
-                          <% end %>
+    <div style="background: #FFF; border-top: 3px solid #7f98b1; position: relative; z-index: 1; margin-top: 30px; border-top: #fd705c;">
+            <div style=" display: block; background: #fd705c; padding: 20px; text-align: center; position: relative; overflow: hidden; color: white; font-size: 2.0rem; width=200px;">
+                        instela.co
+                        <!-- <img src="/assets/instela-white-small.png" style="width: 250px;"> -->
+                      
+            </div>
+            <br><br><br>
+            <div class="invoice-meta">
+              <div style="text-align: center; font-size: 1.5rem; line-height: 1.5em; font-weight: 500;">
+                    Your Inovice for Order #<%= @charge.id %> is attached
+                </div>
+            </div>
 
-                          <% if @charge.materials_total_cost > 0 %>
-                          </tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top">Materials Cost</td>
-                              <td class="alignright" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 1px; border-top-color: #eee; border-top-style: solid; margin: 0; padding: 5px 0;" align="right" valign="top">£<%= @charge.materials_total_cost %></td>
-                          <% end %>
+            <div style="padding: 30px 30px 0px 30px; font-size: 1.5rem;line-height: 2.5em;">
+              <div style="text-align: center;">
+                    Thanks for using instela
+                </div>
+            </div>
 
-                            <tr class="total" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="alignright" width="80%" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 2px; border-top-color: #333; border-top-style: solid; border-bottom-color: #333; border-bottom-width: 0px; border-bottom-style: solid; font-weight: 700; margin: 0; padding: 5px 0;" align="right" valign="top">Total</td>
-                              <td class="alignright" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: right; border-top-width: 2px; border-top-color: #333; border-top-style: solid; border-bottom-color: #333; border-bottom-width: 0px; border-bottom-style: solid; font-weight: 700; margin: 0; padding: 5px 0;" align="right" valign="top">£<%= @charge.amount %></td>
-                            </table></td>
-                      </tr></table></td>
-                </tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block aligncenter" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: center; margin: 0; padding: 0 0 20px;" align="center" valign="top">
-                    <a href="https://www.instela.co" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #348eda; text-decoration: underline; margin: 0;">Instela.co</a>
-                  </td>
-                </tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block aligncenter" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; text-align: center; margin: 0; padding: 0 0 20px;" align="center" valign="top">
+            <br>
+            <div style="padding: 30px 30px 0px 30px; font-size: 1.0rem; line-height: 2.5em;color: #6b7781;">
+                <div style="text-align: center;">
                     Instela Ltd, 563 Chiswick High Rd, London W4 3AY
-                    <br> <!-- VAT Number: 12345678 -->
-                  </td>
-                </tr></table></td>
-          </tr></table><div class="footer" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; clear: both; color: #999; margin: 0; padding: 20px;">
-          <table width="100%" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="aligncenter content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 12px; vertical-align: top; color: #999; text-align: center; margin: 0; padding: 0 0 20px;" align="center" valign="top">Questions? Email <a href="mailto:hello@instela.co?subject=Instela Order #<%= @charge.id %>" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 12px; color: #999; text-decoration: underline; margin: 0;">Click here</a></td>
-            </tr></table></div></div>
-    </td>
-    <td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
-  </tr></table></body>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</body>
+
+
 </html>
+
+
