--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -9,7 +9,7 @@
         
         <div class="navbar-header pull-left" >
             <a class="navbar-brand page-scroll " href="/#page-top">
-            <div class="navbar-inst-logo wow bounceIn" style="width: 280px;"></div>
+            <div class="navbar-inst-logo wow bounceIn logo-width-screensize"></div>
             </a>
         </div>
 
