--- a/app/views/creatives/_testimonial.html.erb
+++ b/app/views/creatives/_testimonial.html.erb
@@ -31,7 +31,7 @@
             </div>  -->
 
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <img class="img-responsive logo-testimonial" style="" src="/assets/ronchini-logo.png">
+                <img class="img-responsive logo-testimonial" style="" src="/assets/ronchini-logo.jpg">
 
                <!--  <img class="img-responsive logo-testimonial" style="width: 25%; text-align: right; margin-right: 50px;" src="/assets/ronchini-logo.png">
  -->
