--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>Instela</title>
-  <%= favicon_link_tag 'favicon-magic.ico' %>
+  <%= favicon_link_tag 'instela-orange.ico' %>
   <%= display_meta_tags %>
   <% if Rails.env.production?  %>
     <script>
