--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -15,7 +15,7 @@
 
             <div class="navbar-header pull-left" >
            		 <a class="navbar-brand page-scroll " href="/#page-top">
-            		<div class="navbar-inst-pages wow bounceIn" style="width: 300px;"></div>
+            		<div class="navbar-inst-pages wow bounceIn logo-width-screensize"></div>
            	 	</a>
         	</div>
 
