--- a/app/views/devise/passwords/_navbar.html.erb
+++ b/app/views/devise/passwords/_navbar.html.erb
@@ -11,7 +11,7 @@
 
             <div class="navbar-header pull-left" >
                 <a class="navbar-brand page-scroll " href="/#page-top">
-                <div class="navbar-inst-logo wow bounceIn" style="width: 300px;"></div>
+                <div class="navbar-inst-logo wow bounceIn logo-width-screensize"></div>
                 </a>
             </div>
 
