--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,9 +4,11 @@
 <body class="login-background"><!-- style="background-color: #e8ecf0;"> -->
   <br><br><br><br>
   <div style="text-align:center; color:white;"> 
-  <h2>Forgot Your Password?</h2>
-</div>
-    <div class="login-form">
+    <h2>Forgot Your Password?</h2>
+  </div>
+  
+  <div class="">
+  <div class="login-form" style="margin-top: 200px">
 
       <div class="mbot30" style="text-align: center;font-weight: 300;">
       <p>Enter your email address below and we'll send you an email with further instructions.</p>
@@ -32,7 +34,7 @@
 
       <% end %>
     </div>
-
+  </div>
 
 </body>
 
