--- a/app/views/layouts/accounts.html.erb
+++ b/app/views/layouts/accounts.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Instela</title>
-  <%= favicon_link_tag 'favicon-magic.ico' %>
+  <%= favicon_link_tag 'instela-orange.ico' %>
   <%= display_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
