Front End mobile responsive orders section

--- a/app/views/creatives/_testimonial.html.erb
+++ b/app/views/creatives/_testimonial.html.erb
@@ -41,9 +41,9 @@
                 <blockquote class="blockquote-reverse testimonial">  <p>"Instela.co offers a service with excellent communication, an easy booking system and good availability when working around a company’s busy schedule. The technician was on time, reliable and able to offer advice. The flat rate is transparent and cost effective with the added bonus of being able to supply tools needed. The service is straightforward and effortless to engage with, with a dedicated account manager helping with each step." </p>      
                               <div class="clearfix visible-md-block"></div>
                 </blockquote>
-                <div class="name-testimonial ">  
+                <!-- <div class="name-testimonial ">  
                     Stephanie Fleet <strong>Gallery Assistant, Ronchini Gallery </strong>     
-                </div>
+                </div> -->
             </div> 
 
             <div class="clearfix visible-md-block"></div>
