--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -297,6 +297,158 @@ Order Page
 }
 
 
+@media only screen and (max-width: 7670px) and (min-width: 768px){
+
+    .invoice-left {
+       float: left;
+    }
+    .invoice-right {
+        float: right;
+    }
+
+}
+
+
+/* **************
+Order Page MOBILE:
+**************** */ 
+
+@media only screen and (max-width: 767px) and (min-width: 0px) {
+    
+    .invoice-left {
+
+      display: inline-block;
+      text-align: center;
+    }
+
+    .invoice-right {
+
+      display: inline-block;
+      text-align: center;
+    }
+    
+ 
+    .page-header {
+        /*height: auto;*/
+        padding: 70px 10px 20px 10px;
+    }
+    
+    /*.page-header-nav {
+        display: none;
+    }*/
+
+    .container {
+        max-width: none;
+    }
+
+    .container-small {
+        max-width: 100%;
+    }
+
+    .order-invoice {
+        margin-top: -21px;
+    }
+
+
+
+    /* ******** Download/Back button mobile only: */
+    
+
+    .container {
+        display: block;
+        padding: 0;
+    }
+
+
+
+    .container .btn-account {
+        min-width: 140px;
+    }
+
+    .container .a {
+        display: inline-block;
+    }
+
+    .container .a  .order-mobile{
+        display: inline-block;
+    }
+
+    .container .order-mobile.order-mobile-small {
+    padding: 0 0px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    height: 40px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    }
+
+    .container .order-mobile {
+    background: none;
+    display: inline-block;
+    border-radius: 3px;
+    padding: 0px 20px;
+    height: 40px;
+    line-height: 1em; /* 38px;*/
+    font-size: 1.5rem;  /*1.3rem;*/
+    font-weight: 300; /*400;*/
+    letter-spacing: 2px; /*1px;*/
+    
+    text-align: center;
+    vertical-align: top;
+    appearance: none;
+    -webkit-appearance: none;
+    text-transform: uppercase;
+
+    border: none;
+    /*border: 1px solid white;*/
+    
+    color: white;
+    outline: none;
+    -webkit-transition: all 0.075s linear;
+    -moz-transition: all 0.075s linear;
+    transition: all 0.075s linear;
+    text-decoration: none;
+}
+
+
+.order-mobile:hover {
+    background: none;
+    display: inline-block;
+    border-radius: 3px;
+    padding: 0px 20px;
+    height: 40px;
+    line-height: 1em; /* 38px;*/
+    font-size: 1.5rem;  /*1.3rem;*/
+    font-weight: 300; /*400;*/
+    letter-spacing: 2px; /*1px;*/
+    
+    text-align: center;
+    vertical-align: top;
+    appearance: none;
+    -webkit-appearance: none;
+    text-transform: uppercase;
+
+    border: none;
+    /*border: 1px solid $instela-light;*/
+    
+    color: $instela-light;
+    outline: none;
+    -webkit-transition: all 0.075s linear;
+    -moz-transition: all 0.075s linear;
+    transition: all 0.075s linear;
+    text-decoration: none;
+}
+
+    .page-header-nav { 
+    text-align: center;
+        width: 100%;
+        display: table;
+    }
+}
+
+
 /* **************
 Order History Page
 ************* */
@@ -490,8 +642,40 @@ ul.user--history-list li .history-amount {
 
 ul.user--history-list:hover {
     background-color:  #fdeae6;
+    text-decoration: underline;
+    color: transparent;
+
 }
 
+/* **************
+Order History Page MOBILE:
+************* */
+
+@media only screen and (max-width: 767px) and (min-width: 0px) {
+    
+    ul.user--history-list li .list-item-inner:hover {
+        text-decoration: none;
+
+    }
+
+    ul.user--history-list li .list-item-inner {
+        margin: 15px 35px 15px 15px;
+    }
+
+    ul.user--history-list li .history-col-status, ul.user--history-list li .history-col-date {
+        font-size: 1.4rem;
+    }
+
+    ul.user--history-list li [class^="history-col-"] {
+        width: 100%;
+        float: none;
+        line-height: 1.3em;
+    }
+    ul.user--history-list li .history-amount {
+        margin-top: -18px;
+    }
+
+}
 
 
 
@@ -907,7 +1091,8 @@ font-family: "Open Sans", sans-serif;
 
 
     .navbar-default .navbar-inst-logo {
-    background: url(/assets/instela-orange.png) no-repeat 0 -170px;
+    background: image-url("instela-orange.png");
+    backgtound: no-repeat 0 -170px;
         background-size: 220px;  /* 150px; */
         background-position: 0 0;
         width: 250px;   /* 150px; */
@@ -926,7 +1111,7 @@ font-family: "Open Sans", sans-serif;
     background: url(/assets/instela-orange.png) no-repeat 0 -170px;
         background-size: 220px;  /* 150px; */
         background-position: 0 0;
-        width: 250px;   /* 150px; */
+        width: 170px;   /* 150px; */
         height: 180px;   /* 45px */
         margin: -92px 0 10px -20px;   /*  -13px 0 10px -6px */
     }
@@ -1154,7 +1339,7 @@ aside {
     background: url(/assets/instela-orange.png) no-repeat 0 -170px;
         background-size: 220px;  
         background-position: 0 0;
-        width: 250px;   
+        width: 170px;   
         height: 180px;  
         margin: -92px 0 10px -20px;
     }
@@ -1164,7 +1349,7 @@ aside {
     background: url(/assets/instela-orange.png) no-repeat 0 -170px;
         background-size: 220px;  /* 250px; */
         background-position: 0 0;
-        width: 250px;   
+        width: 170px;   
         height: 180px;   
         margin: -92px 0 10px -20px;   /* -108px 0 10px -30px; */
     }
