Add apple/safari touch icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <head>
   <title>Instela</title>
   <%= favicon_link_tag 'instela-orange.ico' %>
+  <link href="logo-image.png" rel="apple-touch-icon">
   <%= display_meta_tags %>
   <% if Rails.env.production?  %>
     <script>
