--- a/app/views/layouts/creative.html.erb
+++ b/app/views/layouts/creative.html.erb
@@ -3,10 +3,10 @@
 <head>
   <title>Instela</title>
   <%= favicon_link_tag 'instela-orange.ico' %>
+  <link href="logo-image.png" rel="apple-touch-icon">
   <%= display_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag 'creative/manifest.js' %>
   <%= csrf_meta_tags %>
 </head>
