--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -1,3 +1,5 @@
+  <script src="/assets/parallax.min.js"></script>
+
 <section id="services">
     <div class="container">
         <div class="row">
@@ -39,5 +41,10 @@
             </div>
         </div>
     </div>
+  
 </section>
+
+<!-- placeit.png placeit-pc.jpg -->
+    <br>
+    <div class="parallax-window" data-parallax="scroll" data-image-src=<%= image_path("construction-work-carpenter-tools.jpg") %> data-naturalWidth="400px" data-naturalHeight="300px" data-speed="0.2" data-bleed="50" data-iosFix="false"></div>
 
