--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -25,7 +25,7 @@
                         <img src="/assets/instela-white-small.png" style="width: 250px;">
                       
             </div>
-            <div class="invoice-meta invoice-date-service row">
+            <div class="invoice-meta invoice-date-service row row-right">
             	<div class="invoice-left col-lg-6 col-sm-6 col-xs-6">
                     <% job_service = @order.service_type %>
                     <% if @order.service_type == 'Handyman' %>
