--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -5,7 +5,7 @@
  */
 
 
-$instela-orange: #fd705c;
+$instela-orange: #fd705c; /* rbg: (253,112,92) */
 $instela-hover: #fc442a;
 $instela-light: #ffe7e4;
 $instela-blue: #7f98b1;
@@ -14,6 +14,36 @@ $instela-blue: #7f98b1;
 /* new #fd705c  #fc442a  #ffe7e4*/
 
 
+
+.contact_background {
+    background: rgba(0,0,0,0.35); 
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    top: 50px;
+    line-height: 1.3;
+}
+
+
+
+.contact-Thinweight {
+    font-weight: 300;
+}
+
+
+@media only screen and (max-width: 576px) {
+    
+    .contact_background {
+    background: rgba(0,0,0,0.38); 
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    top: 50px;
+    line-height: 1.7;
+}
+}
 
 .ipad {
     display: inline-block;
@@ -24,18 +54,29 @@ $instela-blue: #7f98b1;
 }
 
 
+
 .parallax-window {
-    min-height: 370px;
+    min-height: 320px;
     background: transparent;
 }
 
 @media only screen and (max-width: 767px) and (min-width: 0px) { 
 
-    .parallax-window {
-    min-height: 0px;
+    .parallax-window {        
+        display:none
     }
 
 }
+
+
+.parallax-contact {
+    min-height: 380px;
+    background: transparent;
+}
+
+
+
+
 
 html,
 body {
