Front End Background Images

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -74,6 +74,11 @@ $instela-blue: #7f98b1;
     background: transparent;
 }
 
+.parallax-redphone {
+    min-height: 500px;
+    background: transparent;
+}
+
 
 
 
