--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -46,7 +46,7 @@
   
 </section>
 
-<!-- placeit.png placeit-pc.jpg -->
+<!-- placeit.png placeit-pc.jpg office1.jpg  construction-work-carpenter-tools.jpg -->
     <br>
-    <div class="parallax-window" data-parallax="scroll" data-image-src=<%= image_path("construction-work-carpenter-tools.jpg") %> data-naturalWidth="400px" data-naturalHeight="300px" data-speed="0.2" data-bleed="50" data-iosFix="false"></div>
+    <div class="parallax-window" data-parallax="scroll" data-image-src=<%= image_path("office1.jpg") %> data-naturalWidth="400px" data-naturalHeight="300px" data-speed="0.2" data-bleed="50" data-iosFix="false"></div>
 
