--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -48,5 +48,5 @@
 
 <!-- placeit.png placeit-pc.jpg office1.jpg  construction-work-carpenter-tools.jpg -->
     <br>
-    <div class="parallax-window" data-parallax="scroll" data-image-src=<%= image_path("office1.jpg") %> data-naturalWidth="400px" data-naturalHeight="300px" data-speed="0.2" data-bleed="50" data-iosFix="false"></div>
+    <div class="parallax-window" data-parallax="scroll" data-image-src=<%= image_path("office1-s.jpg") %> data-naturalWidth="2000px" data-naturalHeight="1333px" data-speed="0.2" data-bleed="50" data-iosFix="false"></div>
 
