--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -19,9 +19,10 @@
 </div> -->
 
 
-<br><br>
-<section  id="contact" class="parallax-redphone" data-parallax="scroll" data-image-src=<%= image_path("phone-red-crop-fs.jpg") %> data-naturalWidth="5000px" data-naturalHeight="2971px" data-speed="0.0" data-bleed="10" data-iosFix="false">
-  <br><br>
+
+<section  id="contact" class="parallax-redphone parallax-redphone-mob" data-parallax="scroll" data-image-src=<%= image_path("phone-red-crop-fs.jpg") %> data-naturalWidth="5000px" data-naturalHeight="2971px" data-speed="0.0" data-bleed="10" data-iosFix="false">
+
+  
 <div >
   <div class="container text-center" >
 
