--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,44 +1,135 @@
 <%= render 'creatives/navbar' %>
 
-<header id="page-top" class='accounts_header'>
-    <div class="header-content">
-        <div class="container-fluid">
-            <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 registration_form">
-                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Charge a Company<br>--- Restricted Area ---<br></h3>
-                <p></p>
-                <%= form_for @charge, url: charges_path do |f| %>
-                  <%= f.error_messages %>
-                  <div class="form-group">
-                    <%= select_tag(:company_email, options_for_select(@accounts), placeholder: 'Company Email', class: 'form-control') %>
-                  </div>
-                  <div class="form-group">
-                    <%= select_tag(:service_type, options_for_select(@services), placeholder: 'Service Type', class: 'form-control') %>
-                  </div>
-                  <div class="form-group">
-                    <%= number_field_tag :duration, nil, :required => true, :step => 'any', placeholder: 'Duration', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    Materials cost:
-                    <%= number_field_tag :materials_total_cost, 0, :required => true, :step => 'any', placeholder: 'Materials Cost', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    Discount (as a percentage -eg 5 for 5%):
-                    <%= number_field_tag :discount, 0, :required => true, :step => 'any', placeholder: 'Discount', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    Quote Fee (in £):
-                    <%= number_field_tag :quote_fee, 0, :required => true, :step => 'any', placeholder: 'Quote Fee', class: 'form-control' %>
-                  </div>
-                  <br>
-                  <div class="form-group">
-                    <%= f.submit 'CHARGE!', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
-                  </div>
-                  <br>
-                <% end %>
-            </div>
+<body style="background: #e8ecf0;">
+
+  <div class="page-header" style="height: auto;">
+    <div class="page-header-inner vc-outer">
+        <div class="vc-inner text-centered">
+            <br>
+            <h2 style="color: white; font-size: 5.0rem;">Charge Client</h2>
+            <h2 style="color: white; font-size: 5.0rem;">Restricted Area. Admin Only</h2>
         </div>
+      </div>
+  </div>
+
+  <div class="mbot30">
+  <!-- container-small before  -->
+    <div class="container-medium", style="margin-top: 40px;">
+
+      <%= form_for @charge, url: charges_path do |f| %>
+        <%= f.error_messages %>
+
+        <div class="box-regist user-account-section">
+    
+          <div class="title-regist">
+            <div class="titleline-regist"><h3>Client Details (Do not charge if no stripe ID)</h3></div>
+          </div>
+          
+          <div class="innerbox-regist">
+            <div class="row-fluid form-row row">
+              <div class="col-xs-12">
+                <label class="label-pre">Full Name, Email, (Stripe ID)</label>
+                <div class="form-group">
+                  <%= select_tag(:company_email, options_for_select(@accounts), placeholder: 'Company Email', class: 'form-control') %>
+                </div>                     
+              </div> 
+            </div>
+          </div>
+        </div>
+
+        <div class="box-regist user-account-section">
+          <div class="title-regist">
+            <div class="titleline-regist"><h3>Contractor Details</h3></div>
+          </div>  
+          <div class="innerbox-regist">
+            <div class="row-fluid form-row row">
+              <div class="col-xs-12">
+                <label class="label-pre">Service type, First name, Mobile, ID</label>
+                <div class="form-group">
+                  <%= select_tag(:contractor_mobile, options_for_select(@contractors), placeholder: 'Contractorse', class: 'form-control') %>
+                </div>                     
+              </div> 
+            </div>
+
+            <div class="row-fluid form-row row">
+              <div class="col-xs-12">
+                <label  style="text-transform: capitalize;", class="label-pre">Materials Cost Refund (in £)</label>
+                <div class="form-group">
+                  <%= number_field_tag :materials_refund, 0, :required => true, :step => 'any', placeholder: 'Materials Cost', class: 'form-control' %>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
+        <div class="box-regist user-account-section">
+          <div class="title-regist">
+            <div class="titleline-regist"><h3>Job Details</h3></div>
+          </div>
+        
+          <div class="innerbox-regist">
+            <div class="row-fluid form-row row">
+              <div class="col-xs-6">
+                <label class="label-pre">Service Type</label>
+                <div class="form-group">
+                  <%= select_tag(:service_type, options_for_select(@services), placeholder: 'Service Type', class: 'form-control') %>
+                </div>                     
+              </div>
+
+              <div class="col-xs-6">
+                <label class="label-pre">Date of Job</label>
+                <div class="form-group">
+                  <%= date_field :date_job, nil, :required => true, class: 'form-control' %>
+                </div>                     
+              </div>
+            </div>
+
+            <div class="row-fluid form-row row">
+              <div class="col-xs-6">
+                <label style="text-transform: capitalize;", class="label-pre">Duration (eg 2.5 for 2h30min)</label>
+                <div class="form-group">
+                  <%= number_field_tag :duration, nil, :required => true, :step => 'any', placeholder: 'Duration', class: 'form-control' %>
+                </div>
+              </div>
+
+              <div class="col-xs-6">
+                <label  style="text-transform: capitalize;", class="label-pre">%Discount (eg 5 for 5%) </label>
+                <div class="form-group">
+                  <%= number_field_tag :discount, 0, :required => true, :step => 'any', placeholder: 'Discount', class: 'form-control' %>
+                </div>
+              </div>
+            </div>
+
+            <div class="row-fluid form-row row">
+              <div class="col-xs-6">
+                <label  style="text-transform: capitalize;", class="label-pre">Materials Cost Charge (including 5% fee, in £)</label>
+                <div class="form-group">
+                  <%= number_field_tag :materials_total_cost, 0, :required => true, :step => 'any', placeholder: 'Materials Cost', class: 'form-control' %>
+                </div>
+              </div>
+
+              <div class="col-xs-6">
+                <label  style="text-transform: capitalize;", class="label-pre">Quote Fee (in £)</label>
+                <div class="form-group">
+                  <%= number_field_tag :quote_fee, 0, :required => true, :step => 'any', placeholder: 'Quote Fee', class: 'form-control' %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+                  
+        <br>
+        <div align="center">
+          <%= f.submit 'CHARGE!', class: 'page-scroll btn btn-primary btn-lg outline submit-account', style: 'border-color: black; color: black; font-weight: 500;' %>
+        </div>
+        <br>
+      <% end %>
     </div>
-</header>
+  </div>
+</body>
 
 <%= render 'creatives/contact' %>
 <%= render 'creatives/footer' %>
