--- a/app/views/send_texts/show.html.erb
+++ b/app/views/send_texts/show.html.erb
@@ -1,23 +1,3 @@
-
-<div class="container">
-	<div class="vc-outer text-centered">
-		<h3> Sender: <%= @sender %> </h3>
-		<h3> Service: <%= @ccc.service_type %> </h3>
-		<h3> Contract Signed: <%= @ccc.signed_contract? %> </h3>
-		<h3> Total Number of Messages: <%= @sms_tot %>
-		<h3>  Messages Inbound: <%= @inbound.count %> </h3>
-		<h3> Messages Outbound: <%= @outbound.count %> </h3>
-		<%  cost = 0.00   %> 
-		<%  cost_unit= " " %> 
-		<% @message.each do |mm| %>
-			<%  cost =  cost + mm.price.to_f %> 
-			<%  cost_unit = mm.price_unit %> 
-		<%  end %>
-		<h3> Total Cost of messages: <%= number_to_currency(cost, :unit => "") %> <%= cost_unit %>  </h3>
-	</div>
-</div>
-
-
 <div class="container">
 
 	<%= form_for @ccc, url: show_id_update_path(@ccc.id) do |f| %>
@@ -74,7 +54,16 @@
         			<div class="col-xs-3">
           				<label class="label-pre">Check Box if Contract Signed</label>
           				<div class="form-group">
-          					<%=  f.radio_button :signed_contract?, :checked => true, class: 'form-control' %>			
+
+
+                   <%= label :signed_contract, "Not Signed", value: false %>
+                    <%= f.radio_button :signed_contract, false, :checked => true, :value => false %>
+
+                    <%= label :signed_contract, "Signed", value: true %>
+                    <%= f.radio_button :signed_contract, true, :value => true%>
+                    
+
+
           				</div>                     
         			</div>
 
